--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Good morning my neighbor</title>
+    <title>Good morning my neighbors</title>
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.15.4/css/pro.min.css">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,17 +25,20 @@
             <a href="https://m.me/ngoc81126" target="_blank"><i class="fab fa-facebook-messenger"></i></i></a>
             <a href="tel:+84357221262" target="_blank"><i class="fas fa-phone"></i></a>
             <a href="http://phamducngoc.epizy.com/CV_PhamDucNgoc.pdf" target="_blank"><i
-                    class="fas fa-file-user"></i></i></a>
-        </div>
-        <div id="game">
-        </div>
-
-        <div class="skill">
-            h a v e - a - n i c e - d a y
-        </div>
+                class="fas fa-file-user"></i></i></a>
+            </div>
+            <div id="game">
+            </div>
+            
+            <div class="skill">
+                h a v e - a - n i c e - d a y
+            </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="./canvasconfetti.js"></script>
     <script src="./script.js"></script>
+
 </body>
 
 </html>
