--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="game">
             </div>
             
-            <div class="skill">
+            <div class="skill" style="margin-top: auto">
                 h a v e - a - n i c e - d a y
             </div>
     </div>
