--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="http://phamducngoc.epizy.com/CV_PhamDucNgoc.pdf" target="_blank"><i
                 class="fas fa-file-user"></i></i></a>
             </div>
-            <div id="game">
+            <div id="game" style="margin:auto 0">
             </div>
             
             <div class="skill" style="margin-top: auto">
