--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="social-media">
             <a href="https://github.com/ngocsnake" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://m.me/ngoc81126" target="_blank"><i class="fab fa-facebook-messenger"></i></i></a>
-            <a href="mailto:ducngoc.dev@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:ducngoc.dev@gmail.com"><i class="fas fa-envelope"></i></a>
             <a href="http://phamducngoc.epizy.com/CV_PhamDucNgoc.pdf" target="_blank"><i
                 class="fas fa-file-user"></i></i></a>
             </div>
