--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Pham Duc Ngoc
         </div>
         <div class="skill">
-            Internship Java | NodeJS
+            Internship Nodejs | ReactJS
         </div>
         <div class="social-media">
             <a href="https://github.com/ngocsnake" target="_blank"><i class="fab fa-github"></i></a>
